--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,8 +1,18 @@
 spring.application.name=File Watcher Service
 
-spring.datasource.url=jdbc:mysql://localhost:3306/billing_db?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=password
+## H2 DataSource
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:~/test
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Enabling H2 Console
+spring.h2.console.enabled=true
+
+## MySQL DataSource
+#spring.datasource.url=jdbc:mysql://localhost:3306/billing_db?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=password
 
 ftp.read.dir=D:\\data_files
 
